<resources>
    <string name="app_name">Culrav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Action Menu -->
    <string name="action_settings">Settings</string>

    <!-- Branding -->
    <string name="mnnit_allahabad">MNNIT Allahabad</string>
    <string name="culrav_2014">Culrav 2014</string>

    <!-- Navigation Menu Items -->
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_schedule">Schedule</string>
    <string name="nav_menu_map">Map</string>
    <string name="nav_menu_team">Team</string>
    <string name="nav_menu_dev">About</string>
    <string name="nav_menu_web">Website</string>
    <string name="nav_menu_fb">Facebook</string>
    <string name="nav_section_social">Social</string>

    <!-- Misc. -->
    <string name="misc_load_with">Load With</string>

    <!-- Developer -->
    <string name="developer_name">Arpit Jaiswal</string>
    <string name="developer_email">arpit.avj.jaiswal@gmail.com</string>
    <string name="developer_profile_pic">Developer Profile Pic</string>
    <string name="home_category_explore">Explore</string>
    <string name="home_category_nites">Nites</string>
    <string name="home_category_stream">Stream</string>

</resources>
